lab9/18CS01009_Dushyanth/calc.output
Grammar

    0 $accept: S $end

    1 S: E

    2 E: E PLUS T
    3  | E MINUS T
    4  | T

    5 T: T MUL F
    6  | T DIV F
    7  | F

    8 F: NUM


Terminals, with rules where they appear

$end (0) 0
error (256)
NUM (258) 8
PLUS (259) 2
MINUS (260) 3
MUL (261) 5
DIV (262) 6


Nonterminals, with rules where they appear

$accept (8)
    on left: 0
S (9)
    on left: 1, on right: 0
E (10)
    on left: 2 3 4, on right: 1 2 3
T (11)
    on left: 5 6 7, on right: 2 3 4 5 6
F (12)
    on left: 8, on right: 5 6 7


state 0

    0 $accept: . S $end

    NUM  shift, and go to state 1

    S  go to state 2
    E  go to state 3
    T  go to state 4
    F  go to state 5


state 1

    8 F: NUM .

    $default  reduce using rule 8 (F)


state 2

    0 $accept: S . $end

    $end  shift, and go to state 6


state 3

    1 S: E .
    2 E: E . PLUS T
    3  | E . MINUS T

    PLUS   shift, and go to state 7
    MINUS  shift, and go to state 8

    $default  reduce using rule 1 (S)


state 4

    4 E: T .
    5 T: T . MUL F
    6  | T . DIV F

    MUL  shift, and go to state 9
    DIV  shift, and go to state 10

    $default  reduce using rule 4 (E)


state 5

    7 T: F .

    $default  reduce using rule 7 (T)


state 6

    0 $accept: S $end .

    $default  accept


state 7

    2 E: E PLUS . T

    NUM  shift, and go to state 1

    T  go to state 11
    F  go to state 5


state 8

    3 E: E MINUS . T

    NUM  shift, and go to state 1

    T  go to state 12
    F  go to state 5


state 9

    5 T: T MUL . F

    NUM  shift, and go to state 1

    F  go to state 13


state 10

    6 T: T DIV . F

    NUM  shift, and go to state 1

    F  go to state 14


state 11

    2 E: E PLUS T .
    5 T: T . MUL F
    6  | T . DIV F

    MUL  shift, and go to state 9
    DIV  shift, and go to state 10

    $default  reduce using rule 2 (E)


state 12

    3 E: E MINUS T .
    5 T: T . MUL F
    6  | T . DIV F

    MUL  shift, and go to state 9
    DIV  shift, and go to state 10

    $default  reduce using rule 3 (E)


state 13

    5 T: T MUL F .

    $default  reduce using rule 5 (T)


state 14

    6 T: T DIV F .

    $default  reduce using rule 6 (T)
